--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://maps.googleapis.com/maps/api/js?key="></script>
 </head>
 <body class="app mat-typography">
 <!-- App Loading... -->
