real api integration

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="SOUFIANE MARAR,HAMZA ELATIF,YASSINE ATIR,ABDELKRIM EHNOUSSA">
-  <link rel="shortcut icon" href="assets/favicon.ico">
+  <link rel="shortcut icon" href="assets/favicon.png">
   <title>PFE- Visit Morocco Admin panel</title>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
